ANTLR/T1Parser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 T1.g 2016-03-03 11:35:47

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  Gekko 
{
public partial class T1Parser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ASTCOMMAND", 
		"ASTCOMMAND1", 
		"ASTCOMMAND2", 
		"ASTCOMMAND3", 
		"ASTCOMPARECOMMAND", 
		"ASTSERIES", 
		"FIX", 
		"GENR", 
		"LIST", 
		"SKIP", 
		"UPD", 
		"TIME", 
		"AST1", 
		"PLUS", 
		"HASH", 
		"Integer", 
		"EOL", 
		"COMMENT_MULTILINE", 
		"COMMENT", 
		"LEFTANGLE", 
		"RIGHTANGLE", 
		"DOLLAR", 
		"SEMICOLON", 
		"LEFTPAREN", 
		"RIGHTPAREN", 
		"Double", 
		"StringInQuotes", 
		"DisplayExpression", 
		"HdgExpression", 
		"MINUS", 
		"WHITESPACE", 
		"AND", 
		"Ident", 
		"TILDE", 
		"EXCL", 
		"AT", 
		"HAT", 
		"COLON", 
		"COMMA", 
		"DOT", 
		"PERCENT", 
		"LEFTCURLY", 
		"RIGHTCURLY", 
		"LEFTBRACKET", 
		"RIGHTBRACKET", 
		"STAR", 
		"VERTICALBAR", 
		"DIV", 
		"EQUAL", 
		"BACKSLASH", 
		"QUESTION", 
		"ANYTHING", 
		"NEWLINE2", 
		"NEWLINE3", 
		"DIGIT", 
		"LETTER", 
		"E_", 
		"Exponent", 
		"D_", 
		"I_", 
		"S_", 
		"P_", 
		"L_", 
		"A_", 
		"Y_", 
		"H_", 
		"G_", 
		"B_", 
		"C_", 
		"F_", 
		"J_", 
		"K_", 
		"M_", 
		"N_", 
		"O_", 
		"Q_", 
		"R_", 
		"T_", 
		"U_", 
		"V_", 
		"W_", 
		"X_", 
		"Z_"
    };

    public const int DOLLAR = 25;
    public const int LEFTANGLE = 23;
    public const int Y_ = 68;
    public const int D_ = 62;
    public const int AST1 = 16;
    public const int STAR = 49;
    public const int GENR = 11;
    public const int FIX = 10;
    public const int LETTER = 59;
    public const int Exponent = 61;
    public const int H_ = 69;
    public const int EXCL = 38;
    public const int U_ = 82;
    public const int Q_ = 79;
    public const int AND = 35;
    public const int L_ = 66;
    public const int EOF = -1;
    public const int UPD = 14;
    public const int E_ = 60;
    public const int AT = 39;
    public const int HAT = 40;
    public const int X_ = 85;
    public const int TIME = 15;
    public const int LEFTPAREN = 27;
    public const int VERTICALBAR = 50;
    public const int EOL = 20;
    public const int LEFTCURLY = 45;
    public const int HdgExpression = 32;
    public const int COMMA = 42;
    public const int A_ = 67;
    public const int EQUAL = 52;
    public const int TILDE = 37;
    public const int RIGHTCURLY = 46;
    public const int PLUS = 17;
    public const int T_ = 81;
    public const int DIGIT = 58;
    public const int I_ = 63;
    public const int DOT = 43;
    public const int ASTCOMMAND2 = 6;
    public const int COMMENT = 22;
    public const int ASTCOMMAND1 = 5;
    public const int M_ = 76;
    public const int P_ = 65;
    public const int ASTCOMMAND3 = 7;
    public const int Double = 29;
    public const int F_ = 73;
    public const int PERCENT = 44;
    public const int ASTCOMPARECOMMAND = 8;
    public const int ASTCOMMAND = 4;
    public const int B_ = 71;
    public const int NEWLINE2 = 56;
    public const int NEWLINE3 = 57;
    public const int RIGHTBRACKET = 48;
    public const int HASH = 18;
    public const int DisplayExpression = 31;
    public const int J_ = 74;
    public const int WHITESPACE = 34;
    public const int W_ = 84;
    public const int SEMICOLON = 26;
    public const int MINUS = 33;
    public const int ANYTHING = 55;
    public const int LIST = 12;
    public const int S_ = 64;
    public const int N_ = 77;
    public const int SKIP = 13;
    public const int COLON = 41;
    public const int ASTSERIES = 9;
    public const int G_ = 70;
    public const int QUESTION = 54;
    public const int Z_ = 86;
    public const int Ident = 36;
    public const int RIGHTPAREN = 28;
    public const int C_ = 72;
    public const int V_ = 83;
    public const int K_ = 75;
    public const int StringInQuotes = 30;
    public const int RIGHTANGLE = 24;
    public const int DIV = 51;
    public const int O_ = 78;
    public const int Integer = 19;
    public const int R_ = 80;
    public const int COMMENT_MULTILINE = 21;
    public const int LEFTBRACKET = 47;
    public const int BACKSLASH = 53;

    // delegates
    // delegators



        public T1Parser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public T1Parser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[147+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return T1Parser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "T1.g"; }
    }



                                     private CommonToken token(string text, int type, int line) {
                                                                   CommonToken t = new CommonToken(type, text);
                                                               t.Line = line;
                                                                   return t;
                                                                }
                                      private System.Collections.Generic.List<string> errors = new System.Collections.Generic.List<string>();
                                      private System.Collections.Generic.List<string> prtItems = new System.Collections.Generic.List<string>();
                                      public override void DisplayRecognitionError(string[] tokenNames,
                                                                          RecognitionException e) {
                                          string hdr = GetErrorHeader(e);
                                          string msg = GetErrorMessage(e, tokenNames);
                                          errors.Add(e.Line + "¤" + e.CharPositionInLine + "¤" + hdr + "¤" + msg);
                                      }
                                      public System.Collections.Generic.List<string> GetErrors() {
                                          return errors;
                                      }


                                  

    public class expr_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // T1.g:138:1: expr : expressions EOF ;
    public T1Parser.expr_return expr() // throws RecognitionException [1]
    {   
        T1Parser.expr_return retval = new T1Parser.expr_return();
        retval.Start = input.LT(1);
        int expr_StartIndex = input.Index();
        object root_0 = null;

        IToken EOF2 = null;
        T1Parser.expressions_return expressions1 = default(T1Parser.expressions_return);


        object EOF2_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // T1.g:138:27: ( expressions EOF )
            // T1.g:138:29: expressions EOF
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_expressions_in_expr370);
            	expressions1 = expressions();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expressions1.Tree);
            	EOF2=(IToken)Match(input,EOF,FOLLOW_EOF_in_expr372); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{EOF2_tree = (object)adaptor.Create(EOF2);
            		adaptor.AddChild(root_0, EOF2_tree);
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, expr_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class expressions_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expressions"
    // T1.g:140:1: expressions : ( command )+ ;
    public T1Parser.expressions_return expressions() // throws RecognitionException [1]
    {   
        T1Parser.expressions_return retval = new T1Parser.expressions_return();
        retval.Start = input.LT(1);
        int expressions_StartIndex = input.Index();
        object root_0 = null;

        T1Parser.command_return command3 = default(T1Parser.command_return);



        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // T1.g:140:27: ( ( command )+ )
            // T1.g:140:29: ( command )+
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// T1.g:140:29: ( command )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0 >= FIX && LA1_0 <= TIME) || (LA1_0 >= PLUS && LA1_0 <= ANYTHING)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // T1.g:0:0: command
            			    {
            			    	PushFollow(FOLLOW_command_in_expressions396);
            			    	command3 = command();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, command3.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, expressions_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expressions"

    public class command_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "command"
    // T1.g:142:1: command : ( tryFirst | commandName ( n )? ( commandOptions )? ( n )? ( commandRest )? chop -> ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) ) chop | ( general )* chop -> ( general )* chop );
    public T1Parser.command_return command() // throws RecognitionException [1]
    {   
        T1Parser.command_return retval = new T1Parser.command_return();
        retval.Start = input.LT(1);
        int command_StartIndex = input.Index();
        object root_0 = null;

        T1Parser.tryFirst_return tryFirst4 = default(T1Parser.tryFirst_return);

        T1Parser.commandName_return commandName5 = default(T1Parser.commandName_return);

        T1Parser.n_return n6 = default(T1Parser.n_return);

        T1Parser.commandOptions_return commandOptions7 = default(T1Parser.commandOptions_return);

        T1Parser.n_return n8 = default(T1Parser.n_return);

        T1Parser.commandRest_return commandRest9 = default(T1Parser.commandRest_return);

        T1Parser.chop_return chop10 = default(T1Parser.chop_return);

        T1Parser.general_return general11 = default(T1Parser.general_return);

        T1Parser.chop_return chop12 = default(T1Parser.chop_return);


        RewriteRuleSubtreeStream stream_commandOptions = new RewriteRuleSubtreeStream(adaptor,"rule commandOptions");
        RewriteRuleSubtreeStream stream_n = new RewriteRuleSubtreeStream(adaptor,"rule n");
        RewriteRuleSubtreeStream stream_commandName = new RewriteRuleSubtreeStream(adaptor,"rule commandName");
        RewriteRuleSubtreeStream stream_chop = new RewriteRuleSubtreeStream(adaptor,"rule chop");
        RewriteRuleSubtreeStream stream_general = new RewriteRuleSubtreeStream(adaptor,"rule general");
        RewriteRuleSubtreeStream stream_commandRest = new RewriteRuleSubtreeStream(adaptor,"rule commandRest");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // T1.g:142:27: ( tryFirst | commandName ( n )? ( commandOptions )? ( n )? ( commandRest )? chop -> ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) ) chop | ( general )* chop -> ( general )* chop )
            int alt7 = 3;
            alt7 = dfa7.Predict(input);
            switch (alt7) 
            {
                case 1 :
                    // T1.g:142:29: tryFirst
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_tryFirst_in_command429);
                    	tryFirst4 = tryFirst();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, tryFirst4.Tree);

                    }
                    break;
                case 2 :
                    // T1.g:143:11: commandName ( n )? ( commandOptions )? ( n )? ( commandRest )? chop
                    {
                    	PushFollow(FOLLOW_commandName_in_command441);
                    	commandName5 = commandName();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_commandName.Add(commandName5.Tree);
                    	// T1.g:143:23: ( n )?
                    	int alt2 = 2;
                    	int LA2_0 = input.LA(1);

                    	if ( (LA2_0 == WHITESPACE) )
                    	{
                    	    int LA2_1 = input.LA(2);

                    	    if ( (synpred3_T1()) )
                    	    {
                    	        alt2 = 1;
                    	    }
                    	}
                    	switch (alt2) 
                    	{
                    	    case 1 :
                    	        // T1.g:0:0: n
                    	        {
                    	        	PushFollow(FOLLOW_n_in_command443);
                    	        	n6 = n();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( (state.backtracking==0) ) stream_n.Add(n6.Tree);

                    	        }
                    	        break;

                    	}

                    	// T1.g:143:26: ( commandOptions )?
                    	int alt3 = 2;
                    	alt3 = dfa3.Predict(input);
                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // T1.g:0:0: commandOptions
                    	        {
                    	        	PushFollow(FOLLOW_commandOptions_in_command446);
                    	        	commandOptions7 = commandOptions();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( (state.backtracking==0) ) stream_commandOptions.Add(commandOptions7.Tree);

                    	        }
                    	        break;

                    	}

                    	// T1.g:143:42: ( n )?
                    	int alt4 = 2;
                    	int LA4_0 = input.LA(1);

                    	if ( (LA4_0 == WHITESPACE) )
                    	{
                    	    int LA4_1 = input.LA(2);

                    	    if ( (synpred5_T1()) )
                    	    {
                    	        alt4 = 1;
                    	    }
                    	}
                    	switch (alt4) 
                    	{
                    	    case 1 :
                    	        // T1.g:0:0: n
                    	        {
                    	        	PushFollow(FOLLOW_n_in_command449);
                    	        	n8 = n();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( (state.backtracking==0) ) stream_n.Add(n8.Tree);

                    	        }
                    	        break;

                    	}

                    	// T1.g:143:45: ( commandRest )?
                    	int alt5 = 2;
                    	switch ( input.LA(1) ) 
                    	{
                    	    case FIX:
                    	    case GENR:
                    	    case LIST:
                    	    case SKIP:
                    	    case UPD:
                    	    case TIME:
                    	    case PLUS:
                    	    case HASH:
                    	    case Integer:
                    	    case COMMENT_MULTILINE:
                    	    case COMMENT:
                    	    case LEFTANGLE:
                    	    case RIGHTANGLE:
                    	    case LEFTPAREN:
                    	    case RIGHTPAREN:
                    	    case Double:
                    	    case StringInQuotes:
                    	    case DisplayExpression:
                    	    case HdgExpression:
                    	    case MINUS:
                    	    case WHITESPACE:
                    	    case AND:
                    	    case Ident:
                    	    case TILDE:
                    	    case EXCL:
                    	    case AT:
                    	    case HAT:
                    	    case COLON:
                    	    case COMMA:
                    	    case DOT:
                    	    case PERCENT:
                    	    case LEFTCURLY:
                    	    case RIGHTCURLY:
                    	    case LEFTBRACKET:
                    	    case RIGHTBRACKET:
                    	    case STAR:
                    	    case VERTICALBAR:
                    	    case DIV:
                    	    case EQUAL:
                    	    case BACKSLASH:
                    	    case QUESTION:
                    	    case ANYTHING:
                    	    	{
                    	        alt5 = 1;
                    	        }
                    	        break;
                    	    case SEMICOLON:
                    	    	{
                    	        int LA5_2 = input.LA(2);

                    	        if ( (synpred6_T1()) )
                    	        {
                    	            alt5 = 1;
                    	        }
                    	        }
                    	        break;
                    	    case EOL:
                    	    	{
                    	        int LA5_3 = input.LA(2);

                    	        if ( (synpred6_T1()) )
                    	        {
                    	            alt5 = 1;
                    	        }
                    	        }
                    	        break;
                    	    case DOLLAR:
                    	    	{
                    	        int LA5_4 = input.LA(2);

                    	        if ( (synpred6_T1()) )
                    	        {
                    	            alt5 = 1;
                    	        }
                    	        }
                    	        break;
                    	}

                    	switch (alt5) 
                    	{
                    	    case 1 :
                    	        // T1.g:0:0: commandRest
                    	        {
                    	        	PushFollow(FOLLOW_commandRest_in_command452);
                    	        	commandRest9 = commandRest();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( (state.backtracking==0) ) stream_commandRest.Add(commandRest9.Tree);

                    	        }
                    	        break;

                    	}

                    	PushFollow(FOLLOW_chop_in_command455);
                    	chop10 = chop();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_chop.Add(chop10.Tree);


                    	// AST REWRITE
                    	// elements:          commandOptions, chop, commandName, commandRest
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 143:63: -> ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) ) chop
                    	{
                    	    // T1.g:143:66: ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASTCOMMAND, "ASTCOMMAND"), root_1);

                    	    // T1.g:143:79: ^( ASTCOMMAND1 commandName )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASTCOMMAND1, "ASTCOMMAND1"), root_2);

                    	    adaptor.AddChild(root_2, stream_commandName.NextTree());
